--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,36 +1,10 @@
 .App {
+	min-height: 100vh;
+	background-color: #30353e;
 	text-align: center;
+	color: aliceblue;
+	font-family: Montserrat, "Helvetica Neue", Helvetica, Arialxs, serif;
 
-	&-logo {
-		height: 40vmin;
-		pointer-events: none;
 
-		@media (prefers-reduced-motion: no-preference) {
-			animation: App-logo-spin infinite 20s linear;
-		}
-	}
-
-	&-header {
-		background-color: #282c34;
-		min-height: 100vh;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		font-size: calc(10px + 2vmin);
-		color: #fff;
-	}
-
-	&-link {
-		color: #61dafb;
-	}
 }
 
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
-}
