--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,14 +1,28 @@
 
 .Home {
-
+padding-bottom: 2em;
   .presentation {
     height: calc(100vh - 10vh);
+.image{
+  position:relative;
+  img {
+    width: 70vw;
+    margin: auto;
 
-    img {
-      width: 50%;
-      margin: auto;
 
-    }
+  }
+  h2{
+position: absolute;
+    top: 80%;
+    transform: translateY(-50%);
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+}
+
 
     h3 {
       width: fit-content;
@@ -26,14 +40,16 @@
   }
 
   .accroche {
+
     h2, h3 {
       text-transform: uppercase;
       font-weight: bold;
       font-size: 1.5em
     }
+
     .title {
       display: flex;
-align-items: center;
+      align-items: center;
       margin: 1em;
 
       hr {
@@ -44,9 +60,8 @@ align-items: center;
     }
 
 
-
     .adjectif {
-      margin: 2em 0.5em;
+      padding: 2em 0.5em;
       display: flex;
       flex-direction: column;
 
@@ -71,13 +86,159 @@ align-items: center;
         height: 50px;
         margin-bottom: 0.5em;
       }
-      li:last-child{
-        margin-top:1em  ;
+
+      li:last-child {
+        margin-top: 1em;
+        padding: 0.5em;
         text-transform: none;
+        text-align: center;
       }
     }
 
 
   }
 
+  .stack {
+
+    hr {
+
+      margin: 0 auto;
+      border: solid 0.3px rgba(255, 133, 55, 0.32);
+      width: 90%;
+
+    }
+
+    div {
+      padding: 2em 1em;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+
+
+      ul {
+        height: 10vh;
+        li {
+          margin: 0.5em 0;
+          img {
+            height: 5vh;
+          }
+        }
+      }
+    }
+
+  }
+  hr {
+    width: 90%;
+
+    border: solid 0.3px rgba(255, 133, 55, 0.32);
+    margin-top: 2em;
+  }
+  .pourquoi{
+
+padding:1em ;
+    h2{
+      font-size: 1.5em;
+      margin: 1em 0.5em 0.5em 0.5em;
+      font-weight: bold;
+    }
+    h3{
+      color: #ff914d;
+      font-weight: bold;
+      font-size: 1em;
+      margin-bottom: 2em;
+    }
+    img{
+      height:20vh;
+      border-radius: 50%;
+    }
+    p{
+      margin: 1em 1em 2em 1em;
+    }
+
+    .link{
+      background-color: #ff7b2d;
+      padding: .5em;
+      border-radius: 2px;
+
+
+    }
+  }
+  .CV{
+    background-image: url("../../../geo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 80%;
+    margin: 3em auto 0 auto;
+    background-color: #a223ffc2;
+    border-radius: 5px;
+    padding: 2em;
+    h2{
+      margin-top: 1em;
+      font-weight: bold;
+      font-size: 1.5em;
+    }
+    h3{
+      font-size: .8em;
+      margin: 1em 0;
+    }
+    img{
+      height:20vh;
+      border-radius: 50%;
+    }
+    p{
+      margin: 1em 1em 2em 1em;
+    }
+
+    button{
+      color: white;
+      font-weight: bold;
+      border: rgba(255, 255, 255, 0.61) solid 1px;
+      padding: 1em;
+      border-radius: 2px;
+      background-color: #ff7b2d;
+      box-shadow: 0px 2px 10px rgb(0 0 0 / 69%);
+    }
+  }
+
 }
+
+@media (min-width: 768px) {
+  .Home{
+    .presentation{
+      h3,h4{
+        font-size: 1.5em;
+      }
+      .image{
+        img{width: 40vw}
+        h2{font-size: 2em}
+    }
+  }
+    .accroche{
+      .adjectif{
+        flex-direction: row;
+justify-content: space-between;
+        div ul li:last-child{
+          width: 80%;
+
+        }
+      }
+    }
+    .pourquoi{
+      p{width: 60%;
+      margin: 1em auto 2em auto}
+    }
+}}
+
+@media (min-width: 1920px) {
+  .Home{
+    .presentation{
+      h3,h4{
+        font-size: 2.5em;
+      }
+      .image{
+        img{width: 40vw}
+        h2{font-size: 3em}
+      }
+    }
+
+  }}
