début des media queries

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,7 +7,7 @@
 
 .App {
 	min-height: 100vh;
-	background-color: #0f1112;
+	background-color: #00060EF7;
 	text-align: center;
 	color: aliceblue;
 	font-family: "HK Grotesk", sans-serif ;
