--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,7 +1,10 @@
-
+.hidden{
+  display: none;
+}
 .Home {
 padding-bottom: 2em;
   .presentation {
+
     height: calc(100vh - 10vh);
 .image{
   position:relative;
