--- a/src/components/Presations/Presations.scss
+++ b/src/components/Presations/Presations.scss
@@ -1,3 +1,82 @@
-h1{
-  color: green;
+.Prestations{
+
+  padding: 5em 1em;
+.entete{
+  h2{
+    text-align: center;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    font-weight: bold;
+    background: linear-gradient(to left, rgb(255, 94, 0), rgb(121,121,244));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+  }
+  h3{
+    text-align: center;
+    display: inline-block;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 1em;
+
+  }
+}
+  .service{
+    margin-top: 5em;
+   h3{
+     font-weight: bold;
+     font-size: 1.5em
+   }
+    ul{
+      li{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding: 1em;
+        border-radius: 5px;
+        margin: 1em auto;
+        width: 80vw;
+        min-height: 20vh;
+        background-color: #111519;
+        box-shadow: rgba(0, 0, 0, 0.29) 0px 1px 10px;
+
+        p{font-size: 0.8em};
+
+        div{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: #a223ffc2;
+          border-radius: 30px;
+          width: 50px;
+          height: 50px;
+          margin: 0.5em auto;
+        }
+      }
+    }
+  }
+
+  .contact{
+    border-radius: 3px;
+    padding: 1em;
+    h4{
+      font-weight: bold;
+      font-size: 1.5em;
+    }
+    background-image: url("../../../geo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 80%;
+    margin: 3em auto 0 auto;
+    background-color: #a223ffc2;
+    a{
+      background: linear-gradient(to left, rgb(255, 94, 0), rgb(121,121,244));
+      display: inline-block;
+      margin-top: 1em;
+      padding: .5em;
+      border-radius: 2px;
+      box-shadow: 0px 2px 10px rgb(0 0 0 / 69%);
+    }
+  }
 }
