--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -199,7 +199,7 @@ padding:1em ;
       border: none;
       padding: 1em;
       border-radius: 2px;
-      background-color: #ff7b2d;
+      background: linear-gradient(to left, rgb(255, 94, 0), rgb(121,121,244));
       box-shadow: 0px 2px 10px rgb(0 0 0 / 69%);
     }
   }
