--- a/src/components/Tarifs/Tarifs.scss
+++ b/src/components/Tarifs/Tarifs.scss
@@ -11,16 +11,49 @@
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-
+      margin-bottom: 1em;
     }
     h3{
-      text-align: center;
-
       display: inline-block;
       font-size: 1em;
       font-weight: bold;
       margin-top: 1em;
+      text-align: justify;
 
     }
+
+
+  }
+  .blockTarif{
+    h3{
+      font-weight: bold;
+      font-size: 1em;
+      color: #ff7b2d;
+      margin-top:1em
+    }
+    h4{
+      font-size: 1.5em;
+      color: white;
+      font-weight: bold;
+      margin: .8em 0 1em 0;
+    }
+    p{
+      text-align: justify;
+      margin-top: 1em;
+      font-size: 0.7em;
+      span{
+        font-weight: bold;
+      }
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin:  2em auto;
+    padding: 1em;
+    background-color: #111519;
+    box-shadow: rgba(0, 0, 0, 0.29) 0px 1px 10px;
+    width: 65vw;
+    min-height: 15vh;
   }
 }
