--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,7 +12,7 @@ header {
   align-items: center;
   font-size: 1em;
   color: aliceblue;
-  background-color: #1b1f23;;
+  background-color: #1b1f23;
 
   h1 {
 
@@ -102,7 +102,7 @@ border: none;
 
 
     ul.OpenMenu {
-      width: 80%;
+      width: 90%;
       position: relative;
       margin: auto;
       height: 100%;
@@ -113,6 +113,7 @@ border: none;
 
       a {
         width: calc(100% / 2 - 2em);
+        height: calc((100vh - 20vh) / 2 );
         border: rgba(255, 145, 77, 0.18) dashed 1px;
         border-radius: 5px;
         display: flex;
