--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -218,14 +218,23 @@ padding:1em ;
     }
   }
     .accroche{
+
+        margin: 10em 0 10em 0;
       .adjectif{
+        padding: 10em .5em;
         flex-direction: row;
-justify-content: space-between;
+        justify-content: space-between;
+        li{
+
+        }
         div ul li:last-child{
           width: 80%;
 
         }
       }
+    }
+    .stack{ margin: 10em 0 7em 0;
+
     }
     .pourquoi{
       p{width: 60%;
@@ -244,5 +253,6 @@ justify-content: space-between;
         h2{font-size: 3em}
       }
     }
+
 
   }}
